@@ -6,7 +6,6 @@ ENABLE_PAGEPERM = true
 ENABLE_EDIT_TOOLBAR = true
 JS_SEARCHREPLACE = true
 ENABLE_DOUBLECLICKEDIT = false
-ENABLE_XHTML_XML = false
 ENABLE_OPEN_GRAPH = false
 USECACHE = true
 ISREADONLY = false
