@@ -1,9 +1,5 @@
 <head>
-<?php if (ENABLE_XHTML_XML and strstr($request->get('HTTP_ACCEPT'),'application/xhtml+xml')) { ?>
-<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=UTF-8" />
-<?php } else { ?>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<?php } ?>
 <?php $ROBOTS_CONTENT = isset($ROBOTS_META) ? $ROBOTS_META : "noindex,nofollow"; ?>
 <meta name="robots" content="<?php echo $ROBOTS_CONTENT ?>" />
 <?php if (!empty($PAGE_DESCRIPTION)) { ?>
